--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -34,6 +34,8 @@ $td-dark-primary-border-color: $td-dark !default;
 $td-dark-text-shadow: 0 -1px 0 rgba(232, 230, 227, 0.25) !default;
 $td-dark-dow-color: rgba(232, 230, 227, 0.5) !default;
 
+$td-widget-z-index: 9999 !default;
+
 :root {
   --td-light: #{$td-light};
   --td-widget-background: #{$td-widget-background};
@@ -68,4 +70,6 @@ $td-dark-dow-color: rgba(232, 230, 227, 0.5) !default;
   --td-dark-primary-border-color: #{$td-dark-primary-border-color};
   --td-dark-text-shadow: #{$td-dark-text-shadow};
   --td-dark-dow-color: #{$td-dark-dow-color};
+
+  --td-widget-z-index: #{$td-widget-z-index};
 }
