deploy: 1c53c5578cd298960a2205d0212d06c6da125828

--- a/6/css/tempus-dominus.css
+++ b/6/css/tempus-dominus.css
@@ -31,6 +31,7 @@
   --td-dark-primary-border-color: #1b1b1b;
   --td-dark-text-shadow: 0 -1px 0 rgba(232, 230, 227, 0.25);
   --td-dark-dow-color: rgba(232, 230, 227, 0.5);
+  --td-widget-z-index: 9999;
 }
 
 .visually-hidden, .tempus-dominus-widget [data-action]::after {
@@ -51,7 +52,7 @@
   width: 19rem;
   border-radius: 4px;
   display: none;
-  z-index: 9999;
+  z-index: var(--td-widget-z-index);
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .tempus-dominus-widget.calendarWeeks {
