--- a/src/docs/partials/namespace/errors.html
+++ b/src/docs/partials/namespace/errors.html
@@ -49,8 +49,8 @@
     </p>
   </div>
 
-  <div class='row'><h2 id='numbersOutOfRage'>numbersOutOfRage <small>(code: 4)</small><a class='anchor-link ' aria-label='Anchor'
-                                                                          href='#numbersOutOfRage'><i
+  <div class='row'><h2 id='numbersOutOfRange'>numbersOutOfRange <small>(code: 4)</small><a class='anchor-link ' aria-label='Anchor'
+                                                                          href='#numbersOutOfRange'><i
       class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       An error when an option value is outside of the expected range.
@@ -137,7 +137,7 @@
         <li><a href='#unexpectedOptions'>UnexpectedOptions</a></li>
         <li><a href='#unexpectedOptionValue'>UnexpectedOptionValue</a></li>
         <li><a href='#typeMismatch'>TypeMismatch</a></li>
-        <li><a href='#numbersOutOfRage'>NumbersOutOfRage</a></li>
+        <li><a href='#numbersOutOfRange'>numbersOutOfRange</a></li>
         <li><a href='#failedToParseDate'>FailedToParseDate</a></li>
         <li><a href='#mustProvideElement'>MustProvideElement</a></li>
         <li><a href='#subscribeMismatch'>SubscribeMismatch</a></li>
