--- a/src/docs/partials/functions/dates.html
+++ b/src/docs/partials/functions/dates.html
@@ -101,13 +101,14 @@
   </div>
 
   <div class='row'>
-    <h2 id='setValue'>setValue(value: DateTime, index?: number)
+    <h2 id='setValue'>setValue(value: DateTime, index?: number, proposedRangeValid?: boolean)
       <a class='anchor-link' aria-label='Anchor' href='#setValue'><i class='fa-solid fa-anchor'
                                                                      aria-hidden='true'></i></a>
     </h2>
     <p>
       Sets the select date index (or the first, if not provided) to the provided DateTime object.
-      For <code>dateRange</code> pickers, please use <code>setRangeValues</code> instead.
+      For <code>dateRange</code> pickers, please use <code>setRangeValues</code> instead. The
+      <code>proposedRangeValid</code> parameter is intended for internal use.
     </p>
 
   </div>
